--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -26,5 +26,5 @@ RUN docker-php-ext-install -j$(nproc) gd pdo_mysql mysqli zip bcmath gmp intl op
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Copy composer.json and install dependencies
-COPY src/composer.json .
+COPY ../src/composer.json .
 RUN composer install --no-dev --optimize-autoloader
