--- a/src/composer.json
+++ b/src/composer.json
@@ -2,14 +2,8 @@
     "name": "mikrotik/monitor",
     "description": "MikroTik PPPoE Monitor",
     "type": "project",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/routeros/routerosapi"
-        }
-    ],
     "require": {
-        "routeros/routerosapi": "^1.2"
+        "peppe78/routeros-api-php": "^1.0"
     },
     "autoload": {
         "psr-4": {
