change package list

--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -28,4 +28,5 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Clear Composer cache and install dependencies
 RUN composer clear-cache
 COPY src/composer.json .
+RUN ping -c 3 google.com
 RUN composer install --no-dev --optimize-autoloader
