--- a/src/composer.json
+++ b/src/composer.json
@@ -2,10 +2,8 @@
     "name": "mikrotik/monitor",
     "description": "MikroTik PPPoE Monitor",
     "type": "project",
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {
-        "evilfreelancer/routeros-api-php": "^1.0"
+        "routeros/client": "^1.0"
     },
     "autoload": {
         "psr-4": {
