--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -29,5 +29,6 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 RUN composer clear-cache
 ENV COMPOSER_PROCESS_TIMEOUT=1200
 COPY src/composer.json .
+COPY src/composer.lock .
 RUN ping -c 3 google.com
 RUN composer install --no-dev --optimize-autoloader -vvv
